--- a/app/src/main/res/layout/activity_choose_site.xml
+++ b/app/src/main/res/layout/activity_choose_site.xml
@@ -26,11 +26,19 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/edit_search"
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="请输入目的地" />
+            android:layout_margin="@dimen/view_margin"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/edit_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="请输入目的地" />
+
+        </android.support.v7.widget.CardView>
+
 
         <include layout="@layout/popup_search_list" />
 
