--- a/app/src/main/res/layout/item_list_event.xml
+++ b/app/src/main/res/layout/item_list_event.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/text_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/view_margin"
